--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "seoulsubwaymap-master",
+  "version": "1.0.0",
+  "description": "공개된 서울 지하철 노선도(SVG)를 활용해 웹 브라우저에서 ZOOM, PAN이 가능한 예제   (Hammmer.js 를 활용하여 모바일 지원 가능)   지하철 노선 텍스트를 클릭하여 이벤트 처리 가능",
+  "main": "server.js",
   "scripts": {
-    "start": "set PORT=3001&&nodemon ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "express": "^4.17.1"
   }
 }
